[Bug][Dashboards] Buttons of Portlets are not clearly visible (#11271)
* [Bug][Dashboards] Buttons of Portlets are not clearly visible
[Bug] Tab headers styling

* [Bug][Dashboards] Buttons of Portlets are not clearly visible
[Bug] Tab headers styling

* added one more fix

--- a/bundles/AdminBundle/Resources/public/css/admin.css
+++ b/bundles/AdminBundle/Resources/public/css/admin.css
@@ -1434,6 +1434,22 @@ span.warning {
     background: #393C3F;
 }
 
+#pimcore_panel_tabs > .x-panel-bodyWrap > .x-panel-body > .x-tabpanel-child > .x-panel-bodyWrap > .x-tab-bar .x-tab-inner-default  {
+    color: #fff;
+}
+
+#pimcore_panel_tabs > .x-panel-bodyWrap > .x-panel-body > .x-tabpanel-child > .x-panel-bodyWrap > .x-tab-bar .x-tab-active .x-tab-inner-default {
+    color: #404040;
+}
+
+#pimcore_panel_tabs > .x-panel-bodyWrap > .x-panel-body > .x-tabpanel-child > .x-panel-bodyWrap > .x-tab-bar .x-tab-active.x-tab-over .x-tab-inner-default {
+    color: #fff;
+}
+
+#pimcore_panel_tabs > .x-panel-bodyWrap > .x-panel-body > .x-tabpanel-child > .x-panel-bodyWrap > .x-tab-bar .x-tab-over {
+    background-color: #444547;
+}
+
 #pimcore_panel_tabs > .x-panel-bodyWrap > .x-tab-bar .x-tab-close-btn {
     width: 20px;
     height: 20px;
@@ -1513,7 +1529,7 @@ span.warning {
     border:0;
 }
 
-.pimcore_main_toolbar .x-toolbar-text {
+.pimcore_main_toolbar .x-toolbar-text, .pimcore_main_toolbar .x-form-cb-label {
     color: #e3e4e5;
 }
 
@@ -2340,6 +2356,6 @@ ul.leaflet-draw-actions.leaflet-draw-actions-top.leaflet-draw-actions-bottom li:
     color: #8e8e8e;
 }
 
-.x-panel-header .x-tool-tool-el {
+.x-panel-header-default .x-tool-tool-el{
     color: #484B4E;
 }
